Complete Assignment 2 coding
